k8s/model-server.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: model-server
spec:
  replicas: 2
  selector:
    matchLabels:
      app: model-server
  template:
    metadata:
      labels:
        app: model-server
    spec:
      containers:
      - name: model-server
        image: tensorflow/serving
        volumeMounts:
        - name: models
          mountPath: /models
        ports:
        - containerPort: 8501
      volumes:
      - name: models
        hostPath:
          path: /root/models
---
apiVersion: v1
kind: Service
metadata:
  name: model-server
  labels:
    app: model-server
spec:
  ports:
  - port: 8511
    nodePort: 30111
    targetPort: 8501
  selector:
    app: model-server
  type: NodePort
